--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,18 @@
 .App {
   text-align: center;
+  margin: 0;
+  background: transparent;
+  > div,
+  input,
+  textarea {
+    color: white !important;
+    margin: 0;
+    background: transparent;
+    box-shadow: none;
+    label {
+      color: white !important;
+    }
+  }
 }
 
 .App-logo {
@@ -51,7 +64,26 @@
 }
 
 .comment-form {
+  align-items: center;
   display: flex;
   gap: 20px;
   flex-direction: column;
+}
+
+.comment-button {
+  background-image: linear-gradient(
+    180deg,
+    hsla(0, 0%, 100%, 0.15),
+    hsla(0, 0%, 100%, 0)
+  );
+  background-color: #2ea44f !important;
+  box-shadow: 0 1px 1px rgba(18, 21, 26, 0.075);
+  font-size: 0.875rem !important;
+  width: 180px !important;
+  height: 50px !important;
+}
+
+.chat-icon {
+  width: 20px;
+  height: 20px;
 }
