--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,6 @@
       color: white !important;
     }
   }
-
   > div {
     max-width: 100%;
   }
@@ -107,6 +106,7 @@
   background-color: #1f2a37;
   border: 1px solid #4b5663 !important;
   border-radius: 5px;
+  transition: all 0.2s ease;
 
   .MuiInputBase-root {
     padding: 0px !important;
@@ -129,6 +129,27 @@
   :hover {
     fieldset {
       border-color: #2ea44f !important;
+    }
+  }
+
+  &.drag-over {
+    border-color: #2ea44f !important;
+    background-color: #2a3441 !important;
+
+    &::after {
+      content: "Drop files here";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      font-size: 1.2rem;
+      z-index: 1;
     }
   }
 }
