--- a/src/App.scss
+++ b/src/App.scss
@@ -168,6 +168,22 @@
   }
 }
 
+/* Prevent Chrome autofill from turning inputs white (dark theme) */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+.MuiInputBase-input:-webkit-autofill,
+.MuiInputBase-input:-webkit-autofill:hover,
+.MuiInputBase-input:-webkit-autofill:focus {
+  -webkit-text-fill-color: #fff !important;
+  caret-color: #fff !important;
+  -webkit-box-shadow: 0 0 0px 1000px #1f2a37 inset !important;
+  transition: background-color 9999s ease-out 0s;
+}
+
 .reply-comment-input {
   input {
     padding-right: 80px;
